# andromeda

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
apps/backup/: .env.example  Dockerfile  README.md  backup.sh  crontab  docker-compose.yml
apps/cellar/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/cellar/src/: auth.rs  claude.rs  db.rs  main.rs  server.rs
apps/cellar/static/: styles.css
apps/cellar/templates/: admin.html  base.html  index.html  login.html  wine.html  wine_form.html
apps/feeds/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/feeds/assets/: styles.css
apps/feeds/src/: auth.rs  feeds.rs  main.rs  models.rs
apps/feeds/src/templates/: admin.html  index.html  login.html
apps/jotts/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/jotts/src/: auth.rs  server.rs
apps/jotts/static/: styles.css
apps/jotts/templates/: view.html
apps/og/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/og/static/: styles.css
apps/parcels/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/parcels/src/: auth.rs  db.rs  main.rs
apps/parcels/templates/: base.html
apps/shrink/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/shrink/src/: server.rs
apps/shrink/templates/: base.html
apps/sipp/: Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
apps/sipp/src/: server.rs
apps/sipp/static/: styles.css
apps/sipp/templates/: admin.html  index.html  snippet.html
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
skills/andromeda-stack/: SKILL.md
skills/darkmatter-styles/: SKILL.md
