[package]
name = "shrink"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
askama = "0.15"
image = "0.25"
