[package]
name = "shrink"
version = "0.1.2"
edition = "2024"
description = "Minimal image compression and resizing service"
license = "MIT"
repository = "https://github.com/stevedylandev/andromeda"
homepage = "https://github.com/stevedylandev/andromeda"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
askama = "0.15"
image = "0.25"
img-parts = "0.3"
